# luau-android

./: .gitignore  .gitmodules  .submodule-pins  API_REFERENCE.md  CMakeLists.txt  NOVELA_INTEGRATION_PLAN.md  README.md  check-submkdules-update.sh  memory-model-html.md  pin-submodules.sh  plan.md  prompt.md  settings.gradle  update-submodules.sh
.githooks/: post-commit
.github/workflows/: build-release-aar.yml  notify-novela.yml
android/: build.gradle
android/kotlin/com/luau/android/: JniProxyHelper.kt  LuauRuntime.kt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/luau/android/: JniProxyHelper.kt  LuauException.kt  LuauRuntime.kt
android/src/main/kotlin/com/luau/android/lexsoup/: Document.kt  Element.kt  Elements.kt  LexSoup.kt  LexSoupBridge.kt
android/src/test/kotlin/com/luau/android/: LexSoupTest.kt  LuauBenchmarkTest.kt  LuauRuntimeTest.kt
benchmarks/: RESULTS.md
docs/: ARCHITECTURE.md
native/bindings/jni/: jni_bridge.cpp  lexsoup_jni.cpp  proxy.cpp  proxy.h
native/core/luau/: loader.cpp  loader.h
native/core/runtime/: allocator.cpp  allocator.h  runtime.cpp  runtime.h
native/modules/buffer/: buffer_module.cpp  buffer_module.h
native/modules/crypto/: crypto_module.cpp  crypto_module.h
native/modules/encoding/: encoding_module.cpp  encoding_module.h
native/modules/html/: html_module.cpp  html_module.h
native/modules/js/: js_module.cpp  js_module.h
native/modules/json/: json_module.cpp  json_module.h
native/modules/regex/: regex_module.cpp  regex_module.h
native/modules/select/: select_module.cpp  select_module.h
native/modules/time/: time_module.cpp  time_module.h
native/modules/url/: url_module.cpp  url_module.h
native/modules/util/: util_module.cpp  util_module.h
patches/: README.md
